tests/tools/turndefs/routeSampler/errors/no_data_in_interval/errors.tools
Warning: No edges in interval from=0.0 to=99.0
